# recchdockerpanel

./: .gitignore  Cargo.toml  install.sh  update.sh
.github/workflows/: release.yml
src/: api.rs  app_store.rs  auth.rs  db.rs  docker.rs  main.rs  models.rs  projects.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  style.css
web/src/layout/: AppLayout.vue
web/src/router/: index.js
web/src/utils/: api.js
web/src/views/: AppStore.vue  Containers.vue  Dashboard.vue  Images.vue  Login.vue  Projects.vue
